<resources>
    <string name="app_name">PocketSecurity</string>
    <string name="title_activity_home">Summary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="record">Record</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Strings related to Home  -->
    <string name="userName">Name</string>
    <string name="flagNum">Flag Count</string>
    <string name="totMin">min</string>
    <string name="peopleNum">People Count</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm your password</string>
    <string name="set_password">Set password</string>
    <string name="set_new_password_prompt">Please set your new password below:</string>
    <string name="disable_password_verification">You already have a password configured! Would you like to disable it or set a new password?</string>
    <string name="disable_password">Disable password verification</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btnCapture">capture</string>
    <string name="need_camera_permissions">This app needs the WRITE_EXTERNAL_STORAGE, RECORD_AUDIO
        and CAMERA permissions to capture video from the camera.</string>
    <string name="use_back_camera">Use back camera</string>
    <string name="use_front_camera">Use front camera</string>

    <string name="record2">Record!</string>
    <string name="will_use_back_camera">Back camera selected.</string>
    <string name="will_use_front_camera">Front camera selected.</string>
    <string name="show_camera_preview_during_recording">Show camera preview during recording?</string>
    <string name="camera_preview_being_hidden">Camera preview being hidden.</string>
    <string name="set_time">Record At</string>
</resources>
