<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="pocketsecurity.agroupofstudents.com.pocketsecurity.Recording.LaunchRecordingActivity">

    <ImageView
        android:id="@+id/backOfPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_camera_rear_black_24dp" />


    <ImageView
        android:id="@+id/frontOfPhone"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_camera_front_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/will_use_back_camera"
        android:id="@+id/cameraTextView"/>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLight"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/record2" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLight"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/set_time"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

</LinearLayout>
